tests/NormalTests/paczka1/small_fuzzy/38753250.err
Error in line 3: 8BRqTQ A741 29,2
Error in line 2: S751 A602 72,1
